discussion/kv_engine/178596/178596_rev19_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [1/n] Pause / Resume Bucket: opcodes

Add new PauseBucket (0x8a) and ResumeBucket (0x8b) opcodes, allow
server to decode them and client_connection to send them.

Add PauseResumeTest suite plus a basic sanity test - initially
disabled as opcodes are not implemented yet - they can be issued but
currently do nothing.

Change-Id: I4b22c1e4b87fb2e8ed691ca3700c852ea7db0730

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-08-31 08:32:09.000000000
Message: 
Uploaded patch set 19.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-31 08:45:48.000000000
Message: 
Patch Set 19: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19831/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcbp_executors.cc:445:56: error: extraneous ")" before ";" [clang-diagnostic-error]
    cookie.sendResponse(cb::mcbp::Status::NotSupported));
                                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcbp_executors.cc:450:56: error: extraneous ")" before ";" [clang-diagnostic-error]
    cookie.sendResponse(cb::mcbp::Status::NotSupported));
                                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19831/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: extraneous ")" before ";" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19831/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48765/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/mcbp_executors.cc(445): error C2059: syntax error: ")" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48765/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40992/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40992/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9625/ : FAILURE

Compile error at [2022-08-31T08:38:32.913Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/daemon/mcbp_executors.cc:445:56:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9625/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9526/ : FAILURE

Compile error at [2022-08-31T08:36:49.675Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21074/ : FAILURE

Compile error at [2022-08-31T08:42:16.695Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21074/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21783/ : FAILURE

Compile error at [2022-08-31T08:36:25.698Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21783/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22135/ : FAILURE

Compile error at [2022-08-31T08:44:58.814Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: expected ?;? before ?)? token
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22135/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22872/ : FAILURE

Compile error at [2022-08-31T08:36:38.073Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22872/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30164/ : FAILURE

Compile error at [2022-08-31T08:41:32.960Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/mcbp_executors.cc:445:56:
error: extraneous ")" before ";"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30164/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19052/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
